app-deploy-a/route.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-a
  namespace: a
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: bitcoin-app-a
              servicePort: 80
            path: /servicea(/|$)(.*)
